# sumcheck-protocol

./: Cargo.toml  README.md
src/: lib.rs  main.rs  oracle.rs  poly.rs  prover.rs  verifier.rs
