[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ndarray = "0.15.0"
rand = "0.8.5"
# ark-ff = "0.3.0"
ark-serialize = { version = "^0.3.0", default-features = false, features = ["derive"] }
ark-poly = { version = "^0.3.0", default-features = false }
ark-ff = { version = "^0.3.0", default-features = false }
ark-bls12-381 = "0.3.0"
ark-std = "0.3.0"
itertools = "0.10.3"
rstest = "0.12.0"
lazy_static = "1.4.0"

[dev-dependencies]
rstest = "0.13.0"
lazy_static = "1.4.0"
